--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 <body>
   <div class="wrap">
-    <h1>Unathi Studios Ltd</h1>
+    <h1>Unathi Studios</h1>
     <div class="tag">Coming soon</div>
 
     <p>
